fix: reduce backdrop blur effect for improved visibility across styles

--- a/src/style/cards.less
+++ b/src/style/cards.less
@@ -182,8 +182,8 @@
 	position: absolute;
 	display: none;
 	background: rgba(0, 0, 0, 0.75);
-	backdrop-filter: blur(8px);
-	-webkit-backdrop-filter: blur(8px);
+	backdrop-filter: blur(3px);
+	-webkit-backdrop-filter: blur(3px);
 	border-radius: 15px;
 	width: 400px;
 	color: white;
@@ -208,8 +208,8 @@
 #card .sideB .section.numbers .stat .tooltiptext {
 	visibility: hidden;
 	background-color: rgba(0, 0, 0, 0.65);
-	backdrop-filter: blur(8px);
-	-webkit-backdrop-filter: blur(8px);
+	backdrop-filter: blur(3px);
+	-webkit-backdrop-filter: blur(3px);
 	color: #fff;
 	text-align: center;
 	border-radius: 10px;
@@ -286,8 +286,8 @@
 
 .stat .modifiers.stat-modifiers {
 	background: rgba(0, 0, 0, 0.65);
-	backdrop-filter: blur(8px);
-	-webkit-backdrop-filter: blur(8px);
+	backdrop-filter: blur(3px);
+	-webkit-backdrop-filter: blur(3px);
 	border: 1px solid rgba(255, 255, 255, 0.2);
 	box-sizing: border-box;
 	left: 50%;
