--- a/src/style/grid.less
+++ b/src/style/grid.less
@@ -96,8 +96,8 @@
 	box-sizing: border-box;
 	color: white;
 	background: rgba(0, 0, 0, 0.8);
-	backdrop-filter: blur(8px);
-	-webkit-backdrop-filter: blur(8px);
+	backdrop-filter: blur(3px);
+	-webkit-backdrop-filter: blur(3px);
 	line-height: 10px;
 	border: 1px solid #555;
 }
