--- a/src/style/styles.less
+++ b/src/style/styles.less
@@ -842,8 +842,8 @@ div.section.info {
 	left: 50%;
 	transform: translateX(-50%);
 	background-color: rgba(0, 0, 0, 0.9);
-	backdrop-filter: blur(8px);
-	-webkit-backdrop-filter: blur(8px);
+	backdrop-filter: blur(3px);
+	-webkit-backdrop-filter: blur(3px);
 	color: #fff;
 	font-weight: bold;
 	padding: 4px 8px;
@@ -1340,6 +1340,8 @@ div.section.info {
 	transform: translateX(-50%);
 	top: 8px;
 	background-color: rgba(0, 0, 0, 0.55);
+	backdrop-filter: blur(3px);
+	-webkit-backdrop-filter: blur(3px);
 	border-radius: 10px;
 	padding: 6px 12px;
 	z-index: 3;
@@ -1368,6 +1370,8 @@ div.section.info {
 	max-width: 450px; /*Keeps #chat.expanded from flickering*/
 	height: 30px;
 	background-color: rgba(0, 0, 0, 0.55);
+	backdrop-filter: blur(3px);
+	-webkit-backdrop-filter: blur(3px);
 	cursor: n-resize;
 	position: fixed;
 	left: 50%;
@@ -1600,8 +1604,8 @@ div.section.info {
 	left: 85px;
 	color: white;
 	background: rgba(0, 0, 0, 0.6);
-	backdrop-filter: blur(8px);
-	-webkit-backdrop-filter: blur(8px);
+	backdrop-filter: blur(3px);
+	-webkit-backdrop-filter: blur(3px);
 	border: 2px black solid;
 	border-radius: 5px;
 	overflow: visible;
@@ -1821,8 +1825,8 @@ div.section.info {
 	left: 50%;
 	transform: translateX(-50%);
 	background-color: rgba(0, 0, 0, 0.75);
-	backdrop-filter: blur(8px);
-	-webkit-backdrop-filter: blur(8px);
+	backdrop-filter: blur(3px);
+	-webkit-backdrop-filter: blur(3px);
 	color: #fff;
 	text-align: center;
 	border-radius: 2px;
@@ -2266,8 +2270,8 @@ span.pure {
 			.tooltiptext {
 				visibility: hidden;
 				background-color: rgba(0, 0, 0, 0.75);
-				backdrop-filter: blur(8px);
-				-webkit-backdrop-filter: blur(8px);
+				backdrop-filter: blur(3px);
+				-webkit-backdrop-filter: blur(3px);
 				color: #fff;
 				text-align: center;
 				border-radius: 2px;
@@ -2329,8 +2333,8 @@ span.pure {
 				display: block;
 				color: white;
 				background: rgba(0, 0, 0, 0.6);
-				backdrop-filter: blur(8px);
-				-webkit-backdrop-filter: blur(8px);
+				backdrop-filter: blur(3px);
+				-webkit-backdrop-filter: blur(3px);
 				border: 2px solid black;
 				border-radius: 5px;
 				overflow: visible;
